tests/regression/error/hw5_error04.nex
var i;
var j;
  fun f()
  {
    i = 3;
    j = 4;
    i = j > false;
  }
   i = f();
